kubernetes/apps/base/rustdesk/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: rustdesk-ws-headers
  namespace: rustdesk
spec:
  headers:
    customRequestHeaders:
      Connection: "Upgrade"
      Upgrade: "websocket"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: rustdesk-api
  namespace: rustdesk
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rustdesk.${cluster_domain}`)
      kind: Rule
      services:
        - name: rustdesk-api
          port: 8080
    - match: Host(`rd-id.${cluster_domain}`)
      kind: Rule
      middlewares:
        - name: rustdesk-ws-headers
      services:
        - name: hbbs
          port: 21118
    - match: Host(`rd-relay.${cluster_domain}`)
      kind: Rule
      middlewares:
        - name: rustdesk-ws-headers
      services:
        - name: hbbr
          port: 21119
